--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,24 @@
   "name": "tajem-less-hooks",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "css/main.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "less/main.less",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "less",
+      "css",
+      "bower_components",
+      "bower_components/tajem/less",
+      "bower_components/tajem/less/components"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -161,12 +176,12 @@
     "history": []
   },
   "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"]}",
-  "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
+  "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"],\"outputSuffix\":null}",
   "autoprefixer": {
     "browsers": "last 5 versions"
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
-  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"]}",
+  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"outputSuffix\":\".min\"}",
   "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"]}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
